--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ exclude: |
   (LICENSE.*|COPYING.*)
 default_language_version:
   python: python3
+  node: "14.13.0"
 repos:
   - repo: https://github.com/myint/autoflake
     rev: v1.4
@@ -22,17 +23,15 @@ repos:
     rev: 19.10b0
     hooks:
       - id: black
-  - repo: https://github.com/prettier/prettier
-    rev: 2.0.2
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v1.19.1
     hooks:
-      - &prettier
-        id: prettier
+      - id: prettier
+      - id: prettier
+        name: prettier xml plugin
         additional_dependencies:
+          - "prettier@1.19.1"
           - "@prettier/plugin-xml@0.7.2"
-        args:
-          - --plugin=@prettier/plugin-xml
-      - <<: *prettier
-        name: prettier + plugin-xml
         files: \.xml$
   - repo: https://github.com/pre-commit/mirrors-eslint
     rev: v6.8.0
@@ -77,17 +76,17 @@ repos:
         files: /__init__\.py$
         additional_dependencies: ["flake8-bugbear==19.8.0"]
   - repo: https://github.com/pre-commit/mirrors-pylint
-    rev: v2.3.0
+    rev: v2.5.3
     hooks:
       - id: pylint
         name: pylint with optional checks
         args: ["--rcfile=.pylintrc", "--exit-zero"]
         verbose: true
-        additional_dependencies: ["pylint-odoo==3.1.0"]
+        additional_dependencies: ["pylint-odoo==3.5.0"]
       - id: pylint
         name: pylint with mandatory checks
         args: ["--rcfile=.pylintrc-mandatory"]
-        additional_dependencies: ["pylint-odoo==3.1.0"]
+        additional_dependencies: ["pylint-odoo==3.5.0"]
   - repo: https://github.com/asottile/pyupgrade
     rev: v1.26.2
     hooks:
