--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,15 +1,25 @@
 # Do NOT update manually; changes here will be overwritten by Copier
-_commit: v1.5.0
+_commit: v1.14.2
 _src_path: https://github.com/OCA/oca-addons-repo-template.git
 ci: GitHub
 dependency_installation_mode: PIP
-generate_requirements_txt: false
+generate_requirements_txt: true
+github_check_license: true
+github_ci_extra_env: {}
+github_enable_codecov: false
+github_enable_makepot: false
+github_enable_stale_action: false
+github_enforce_dev_status_compatibility: false
 include_wkhtmltopdf: false
 odoo_version: 15.0
+org_name: Glo Networks
+org_slug: GlodoUK
 rebel_module_groups: []
 repo_description: This project aims to deal with any generalised modules related to
-  the mail components of Odoo.
+    the mail components of Odoo.
 repo_name: Mail related addons for Odoo
 repo_slug: mail
+repo_website: https://github.com/GlodoUK/mail
 travis_apt_packages: []
 travis_apt_sources: []
+
